<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".order_view.OrderViewActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/order_cannot_be_delivered"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_call_24px" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:title="@string/order" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_s_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/text"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_address"
                android:layout_below="@id/customer_name"
                android:layout_marginTop="16dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/delivery_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/text2"
                android:textSize="16sp"
                android:layout_below="@id/customer_name"
                android:layout_marginTop="16dp" />
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_status"
                android:layout_below="@id/delivery_address"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/text3"
                android:layout_below="@id/delivery_address"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/vegetables"
                android:layout_below="@id/order_status"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:id="@+id/vegetables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text4"
                android:layout_marginTop="16dp"
                android:orientation="vertical"/>

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_below="@id/vegetables"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/text5"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_below="@id/vegetables"
                android:layout_marginTop="16dp" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/order_ready_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/button_text_size_subtitle"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/order_cannot_be_delivered"
        android:text="@string/order_ready"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/order_cannot_be_delivered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size_subtitle"
        android:layout_alignParentBottom="true"
        android:text="@string/order_cannot_be_delivered"
        android:backgroundTint="#6464FF"
        android:layout_toStartOf="@id/order_ready_button"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"/>
</RelativeLayout>