<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00F8F7F7"
    android:id="@+id/parent"
    tools:context=".login.VerifyPhoneActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/one_time_password"
        style="@style/TextAppearance.AppCompat.Title"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/please_enter_6_digit_verfication_code_sent_by_sms_on_your_mobile_phone"
        style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
        android:textAlignment="center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/timertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:text="@string/_0_00" />

                <Button
                    android:id="@+id/resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity=""
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:height="32dp"
                    android:enabled="false"
                    android:text="@string/resend_otp"
                    android:textSize="@dimen/button_text_size_subtitle2"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

                <EditText
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="numberPassword"
                    android:letterSpacing="2.0"
                    android:maxLength="6"
                    android:textAlignment="center"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textbox"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:height="56dp"
                    android:enabled="false"
                    android:text="@string/submit"
                    android:textSize="@dimen/button_text_size_subtitle"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>