<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">
        <ImageView
            android:id="@+id/customer_image"
            android:layout_width="150dp"
            android:src="@drawable/vegetable_image_not_available"
            android:layout_height="100dp"/>
        <TextView
            android:id="@+id/customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/customer_image"
            android:layout_marginStart="16dp"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/vegetable_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/customer_name"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/customer_image"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/text5"
            android:text="@string/price"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/vegetable_price"
            android:text="@string/rupee_symbol"/>
        <TextView
            android:id="@+id/vegetable_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="200"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/vegetable_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vegetable_type"
            android:layout_toEndOf="@id/customer_image"
            android:inputType="numberDecimal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/vegetable_quantity"
            android:layout_below="@id/vegetable_type"
            android:layout_marginTop="30dp"
            android:text="@string/kg"/>
        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/vegetable_price"
            android:layout_marginTop="72dp"
            android:background="@color/white"
            android:src="@drawable/ic_delete_24px"/>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>